[package]
name = "histogram"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3.1"
serde = { version = "1.0.104", features = ["derive"] }
